--- a/index.html
+++ b/index.html
@@ -250,5 +250,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         <script src="asset/js/inscription.js"></script>
         <script src="asset/js/login.js"></script>
+        <script src="asset/js/signin.js"></script>
     </body>
 </html>
