--- a/index.html
+++ b/index.html
@@ -185,15 +185,15 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      <form>
+       
                         <div class="form-group">
                           <input type="email" class="form-control" id="identifiant" aria-describedby="emailHelp" placeholder="Votre mail / pseudo">
                         </div>
                         <div class="form-group">
                           <input type="password" class="form-control" id="password" placeholder="Votre mot de passe">
                         </div>
-                        <button type="submit" class="btn btn-primary" id="login">Connexion</button>
-                      </form>
+                        <button type="submit" class="btn btn-primary" id="login" onclick="login();">Connexion</button>
+                 
 
                       <p class=text-center><span id="loginError"></span></p>
                       <p class="inscription-p text-center">Vous n'avez pas de compte? Veuillez vous <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#InscriptionModal">Inscrire ici.</a></p>
