--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <div class="form-group">
                           <input type="password" class="form-control" id="password" placeholder="Votre mot de passe">
                         </div>
-                        <button type="submit" class="btn btn-primary" id="login" onclick="login();">Connexion</button>
+                        <button type="submit" class="btn btn-primary" id="login">Connexion</button>
                  
 
                       <p class=text-center><span id="loginError"></span></p>
