--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <!-- end -->
 
               <!--modale connexion-->
-              <div class="modal fade bd-example-modal-lg" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModal" aria-hidden="true">
+              <div class="modal fade bd-example-modal-lg" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModal">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content text-center">
                     <div class="modal-header text-center bg-dark">
