--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       <a class="nav-link" href="#">Actus</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal" id="log_in">Connexion</a>
+                      <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal" id="log_in" data-backdrop="false">Connexion</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" id="admin"  style="display:none;">Admin</a>
