--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                           <input type="email" class="form-control" id="identifiant" aria-describedby="emailHelp" placeholder="Votre mail / pseudo">
                         </div>
                         <div class="form-group">
-                          <input type="password" class="form-control" id="password" placeholder="Votre mot de passe">
+                          <input type="password" class="form-control" id="loginPassword" placeholder="Votre mot de passe">
                         </div>
                         <button type="submit" class="btn btn-primary" id="login">Connexion</button>
                  
@@ -226,10 +226,10 @@
                                     <input type="email" class="form-control" id="email" placeholder="Votre Email">
                                   </div>
                                   <div class="form-group">
-                                    <input type="password" class="form-control" id="password" aria-describedby="password" placeholder="Password">
+                                    <input type="password" class="form-control" id="signinPassword"  placeholder="Password">
                                   </div>
                                   <div class="form-group">
-                                    <input type="password" class="form-control" id="verifPassword" aria-describedby="emailHelp" placeholder="Password">
+                                    <input type="password" class="form-control" id="verifPassword"  placeholder="verification password">
                                   </div>
                                   <button type="submit" class="btn btn-primary" id="signin">Inscription</button>
 
