--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                         <button type="submit" class="btn btn-primary" id="login">Connexion</button>
                  
 
-                      <p class="text-center"><span id="loginError"></span></p>
-                      <p class="inscription-p text-center">Vous n'avez pas de compte? Veuillez vous <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#signinModal">Inscrire ici.</a></p>
+                        <p class="text-center"><span id="loginError"></span></p>
+                      <p class="inscription-p text-center">Vous n'avez pas de compte? Veuillez vous <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#signinModal" data-backdrop="false">Inscrire ici.</a></p>
                        
                     </div>
                     <div class="modal-footer">
