--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body id="body">
         <div class="container-fluid">
 
-            <header>
+            <header class="header">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="#">
                     <img src="asset/images/capture.PNG" class="img-fluid img-brand rounded" alt="">
