--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <p class="text-center text-white copy-text padding-top-sublime">Copyright xxx 2021</p>
+                        <p class="text-center text-white copy-text padding-top-sublime">Copyright Find-us 2021</p>
                     </div>
                 </div>
             </footer>
