--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                       <a class="nav-link" href="#">Jouer</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Classement</a>
+                      <a class="nav-link" href="asset/html/classement.html">Classement</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Actus</a>
@@ -153,7 +153,7 @@
             <div class="modal fade" id="MentionsModale" tabindex="-1" role="dialog" aria-labelledby="MentionsModaleLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header bg-dark text-white">
                       <h5 class="modal-title" id="MentionsModaleLabel">Mentions legales</h5>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
