--- a/asset/html/jeu.html
+++ b/asset/html/jeu.html
@@ -43,7 +43,7 @@
       <main class="col-12">
         <div class="row">
           <div class="col-12 text-center mt-4 timer">
-            <span id="timer" class="timer-size">60</span>
+            <span id="timer" class="timer-size" style="display:none;"></span>
           </div>
         </div>
         <div class="row">
