--- a/asset/html/leveltheme.html
+++ b/asset/html/leveltheme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
-    <!-- <link rel="icon" type="image/png" href="../images/pumpkin_logo.jpg" /> -->
+    <link rel="icon" type="image/png" href="../images/capture.PNG" />
     <link rel="stylesheet" href="../BootStrap/bootstrap.min.css" />
     <link rel="stylesheet" href="../BootStrap/bootstrap-grid.css" />
     <link rel="stylesheet" href="../BootStrap/bootstrap-grid.min.css" />
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="asset/images/capture.PNG" class="img-fluid img-brand rounded" alt="">
+            <img src="../images/capture.PNG" class="img-fluid img-brand rounded" alt="">
            Find-Us
           </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -146,6 +146,7 @@
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="../BootStrap/bootstrap.bundle.min.js"></script>
+    <script src="../js/leveltheme.js"></script>
     <script src="../css/style.css"></script>
 </body>
 </html>
