update html et css

--- a/asset/html/actus.html
+++ b/asset/html/actus.html
@@ -11,50 +11,101 @@
         <div class="container-fluid">
 
             <header class="header">
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="../../index.html">
-                        <img src="../images/capture.PNG" class="img-fluid img-brand rounded" alt="">
-                       Find-Us
-                      </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Jouer</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="classement.html">Classement</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="actus.html">Actus</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal" id="log_in" data-backdrop="false">Connexion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" id="admin"  style="display:none;">Admin</a>
-                        </li>
-                      <li class="nav-item welcome-link">
-                          <p class="text-white welcome_nickname"><a href="profil.html"><span id="welcomeNickname" style="display:none;"></span></a></p>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#" id="logout"  style="display:none;">Deconnexion</a>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="../../index.html">
+                    <img src="../images/capture.PNG" class="img-fluid img-brand rounded" alt="">
+                   Find-Us
+                  </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Jouer</a>
                     </li>
-                      </ul>
-                    </div>
-                  </nav>
-                </header>
+                    <li class="nav-item">
+                      <a class="nav-link" href="classement.html">Classement</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="actus.html">Actus</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal" id="log_in" data-backdrop="false">Connexion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="admin"  style="display:none;">Admin</a>
+                    </li>
+                  <li class="nav-item welcome-link">
+                      <p class="text-white welcome_nickname"><a href="profil.html"><span id="welcomeNickname" style="display:none;"></span></a></p>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" id="logout"  style="display:none;">Deconnexion</a>
+                </li>
+                  </ul>
+                </div>
+              </nav>
+            </header>
 
             <main class="col-12">
-                <h1 class="text-center mt-5 mb-5">Classement</h1>
-                <ol class="list-group mb-5" id="list-group">
+                <h1 class="text-center mt-5 mb-5">Actualités</h1>
+                <div class="row mb-5">
 
+                                        <!--Actus -->
+                                        <div class="col-12 col-md-6 col-lg-4">
+                                        <div class="card actus" style="">
+                                            <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                                            <div class="card-body">
+                                              <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                        </div>
 
+                                        <div class="col-12 col-md-6 col-lg-4">
+                                            <div class="card actus" style="">
+                                                <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                                                <div class="card-body">
+                                                  <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                        </div>
+                                        <div class="col-12 col-md-6 col-lg-4">
+                                            <div class="card actus" style="">
+                                                <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                                                <div class="card-body">
+                                                  <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                        </div>
+                                        <div class="col-12 col-md-6 col-lg-4">
+                                            <div class="card actus" style="">
+                                                <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                                                <div class="card-body">
+                                                  <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                        </div>
+                                        <div class="col-12 col-md-6 col-lg-4">
+                                            <div class="card actus" style="">
+                                                <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                                                <div class="card-body">
+                                                  <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                        </div>
+                                        <div class="col-12 col-md-6 col-lg-4">
+                                            <div class="card actus" style="">
+                                                <img class="card-img-top" src="https://picsum.photos/id/237/500/300" alt="Card image cap">
+                                                <div class="card-body">
+                                                  <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            </div>
+                                        </div>
+                                        </div>
+                
 
-                </ol>
-
+                
+                </div>
+                                        <!--End Actus -->
             </main>
 
             <footer class="footer">
@@ -173,7 +224,6 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-        <script src="../js/classement.js"></script>
         <script src="../js/login.js"></script>
         <script src="../js/signin.js"></script>
     </body>
