--- a/asset/html/profil.html
+++ b/asset/html/profil.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>bonus2 boostrap</title>
+        <title>Profil</title>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/profil.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body id="body">
@@ -48,12 +49,45 @@
                 </header>
 
             <main class="col-12">
-                <h1 class="text-center mt-5 mb-5">Classement</h1>
-                <ol class="list-group mb-5" id="list-group">
+                <div class="row">
+                    <div class="col-12 col-lg-6 text-center">
+
+                            <div class="col-12 img-profil-col">
+                            <img src="https://previews.123rf.com/images/salamatik/salamatik1801/salamatik180100019/92979836-ic%C3%B4ne-de-visage-anonyme-de-profil-personne-silhouette-grise-avatar-par-d%C3%A9faut-masculin-photo-placeholder-.jpg" class="img-fluid img-profil">
+                            </div>
+
+                            <div class="col-12 profil-option-1">
+                                <a href="#">Editer le mot de passe</a>
+                            </div>
+                            <div class="col-12 profil-option-1">
+                                <a href="#">Changer l'adresse mail</a>
+                            </div>
+                            <div class="col-12 profil-option-1">
+                                <a href="#">supprimer votre compte</a>
+                            </div>
 
 
+                    </div>
+                    <div class="col-12 col-lg-6 text-center stat-col mb-5">
+                        <h3 class="mt-4">Statistiques</h3>
+                        <hr class="bg-light">
+                        <p class="stats">Maximum de points : 4000</p>
+                        <hr class="bg-light">
+                        <p class="stats">Catégorie préférée : Animals</p>
+                        <hr class="bg-light">
+                        <p class="stats">Niveau le plus joué : 2</p>
+                        <hr class="bg-light">
+                        <p class="stats">Meilleur timer : 45sc</p>
+                        <hr class="bg-light">
+                        <p class="stats">Dernière partie jouée : 12/01/2021</p>
+                        <hr class="bg-light">
+                        <p class="stats">Dernier resultat : gagné</p>
 
-                </ol>
+
+                        
+
+                    </div>
+                </div>
 
             </main>
 
