--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                       <a class="nav-link" href="asset/html/classement.html">Classement</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Actus</a>
+                      <a class="nav-link" href="asset/html/actus.html">Actus</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal" id="log_in" data-backdrop="false">Connexion</a>
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="#" id="admin"  style="display:none;">Admin</a>
                     </li>
                   <li class="nav-item welcome-link">
-                      <p class="text-white welcome_nickname"><span id="welcomeNickname" style="display:none;"></span></p>
+                      <p class="text-white welcome_nickname"><a href="asset/html/profil.html"><span id="welcomeNickname" style="display:none;"></span></a></p>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#" id="logout"  style="display:none;">Deconnexion</a>
