--- a/asset/html/jeu.html
+++ b/asset/html/jeu.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/jeu.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/png" href="../images/capture.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body class="body">
@@ -22,7 +23,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Jouer</a>
+                  <a class="nav-link" href="leveltheme.html">Jouer</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="classement.html">Classement</a>
