--- a/asset/html/leveltheme.html
+++ b/asset/html/leveltheme.html
@@ -12,42 +12,42 @@
 </head>
 <body>
   <div class="container-fluid">
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            <img src="../images/capture.PNG" class="img-fluid img-brand rounded" alt="">
-           Find-Us
-          </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Jouer</a>
+    <header class="header">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="../../index.html">
+              <img src="../images/capture.PNG" class="img-fluid img-brand rounded" alt="">
+             Find-Us
+            </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="leveltheme.html">Jouer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="classement.html">Classement</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="actus.html">Actus</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal" id="log_in" data-backdrop="false">Connexion</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#" id="admin"  style="display:none;">Admin</a>
+              </li>
+            <li class="nav-item welcome-link">
+                <p class="text-white welcome_nickname"><a href="profil.html"><span id="welcomeNickname" style="display:none;"></span></a></p>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Classement</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Actus</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-toggle="modal" data-target="#ConnexionModale" id="login">Connexion</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" id="admin">Admin</a>
-            </li>
-          <li class="nav-item welcome-link">
-              <p class="text-white welcome_nickname">Bienvenue, <span id="welcomeNickname">Lee</span></p>
+              <a class="nav-link" href="#" id="logout"  style="display:none;">Deconnexion</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="logout">Deconnexion</a>
-        </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+            </ul>
+          </div>
+        </nav>
+      </header>
     <main>
     <div class="container">
         <div class="row">
@@ -119,7 +119,7 @@
                 </div>
             </div>
                 
-                <div class="col-md-12 col-12"><button class="cgButtonGame"><img src="../images/jouer.png" id="startGame" class="text-center"/></button></div>
+                <div class="col-md-12 col-12"><button class="cgButtonGame" id="startGame"><img src="../images/jouer.png" class="text-center"/></button></div>
             
         </form>
     </div>
