--- a/asset/html/profil.html
+++ b/asset/html/profil.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/profil.css">
+        <link rel="icon" type="image/png" href="../images/capture.PNG" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body id="body">
@@ -23,7 +24,7 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                       <ul class="navbar-nav">
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Jouer</a>
+                            <a class="nav-link" href="leveltheme.html">Jouer</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="classement.html">Classement</a>
@@ -63,7 +64,7 @@
                                 <a href="#">Changer l'adresse mail</a>
                             </div>
                             <div class="col-12 profil-option-1">
-                                <a href="#">supprimer votre compte</a>
+                                <a href="#">Supprimer votre compte</a>
                             </div>
 
 
