update html et css

--- a/asset/html/jeu.html
+++ b/asset/html/jeu.html
@@ -12,7 +12,7 @@
   <body class="body">
     <div class="container-fluid">
       <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="../../index.html">
                 <img src="../images/capture.PNG" class="img-fluid img-brand rounded" alt="">
                Find-Us
