--- a/asset/html/jeu.html
+++ b/asset/html/jeu.html
@@ -143,12 +143,12 @@
             </button>
           </div>
           <div class="modal-body text-center">
-            <p class="text-center">Vous avez<span id="resultat"></span></p><br>
-            <p class="text-center">Vous avez <span id="pts"></span>points</p>
+            <p class="text-center"><span id="resultat"></span></p><br>
+            <p class="text-center">Vous avez <span id="pts"></span> points</p>
              
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <a href="leveltheme.html"><button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button></a>
           </div>
         </div>
       </div>
