--- a/asset/html/leveltheme.html
+++ b/asset/html/leveltheme.html
@@ -63,7 +63,7 @@
             <div class="col-md-3 col-12 order-3 order-md-2 text-center mb-3 title-level">Niveau</div>
             <div class="col-md-6 col-12 order-5 order-md-3 text-center mb-3 title-rules">Règles</div>
             <!-- Deuxième ligne -->
-            <div class="col-md-3 h-100 order-2 order-md-4">
+            <div class="col-md-3 h-100 order-2 order-md-4 col-sublime">
               <div id="carouselThemeControls" class="carousel slide" data-ride="carousel" data-pause="true"
                 data-interval="false">
                 <div class="carousel-inner">
@@ -93,7 +93,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-3 order-md-5 order-4">
+            <div class="col-md-3 order-md-5 order-4 col-sublime">
               <div id="carouselLevelControls" class="carousel slide" data-ride="carousel" data-pause="true"
                 data-interval="false">
                 <div class="carousel-inner">
@@ -123,7 +123,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-6 text-center order-md-6 order-6">
+            <div class="col-md-6 text-center order-md-6 order-6 col-sublime">
               <ol>
                 <li>Temps pour deviner une liste de mot : <span id="rule1">60/150/200</span> secondes</li>
                 <li>Nombre de mots : <span id="rule2">10/12/15</span></li>
