--- a/asset/html/leveltheme.html
+++ b/asset/html/leveltheme.html
@@ -56,14 +56,14 @@
 
         <form action="#" method="GET">
 
-          <div class="row">
+          <div class="row imageheight">
             <!-- Première ligne -->
             <div class="col-md-4 col-12 order-1 order-md-1 bg-primary text-center">Thème</div>
             <div class="col-md-2 col-12 order-3 order-md-2 bg-secondary text-center">Niveau</div>
             <div class="col-md-6 col-12 order-5 order-md-3 bg-warning text-center">Règles</div>
             <!-- Deuxième ligne -->
-            <div class="col-md-4 bg-primary h-100 order-2 order-md-4">
-              <div id="carouselThemeControls" class="carousel slide" data-ride="carousel" data-pause="true"
+            <div class="col-md-4 bg-primary h-100 order-2 order-md-4 imageheight">
+              <div id="carouselThemeControls" class="carousel slidet" data-ride="carousel" data-pause="true"
                 data-interval="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active text-center">
@@ -92,8 +92,8 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-2 bg-secondary order-md-5 order-4">
-              <div id="carouselLevelControls" class="carousel slide" data-ride="carousel" data-pause="true"
+            <div class="col-md-2 bg-secondary order-md-5 order-4 imageheight">
+              <div id="carouselLevelControls" class="carousel slidet" data-ride="carousel" data-pause="true"
                 data-interval="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active text-center">
